@@ -312,22 +312,6 @@ name|LinkedHashMap
 argument_list|<>
 argument_list|()
 decl_stmt|;
-DECL|field|createdCores
-specifier|private
-specifier|final
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|SolrCore
-argument_list|>
-name|createdCores
-init|=
-operator|new
-name|LinkedHashMap
-argument_list|<>
-argument_list|()
-decl_stmt|;
 DECL|field|container
 specifier|private
 specifier|final
@@ -1115,16 +1099,6 @@ name|keySet
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|set
-operator|.
-name|addAll
-argument_list|(
-name|createdCores
-operator|.
-name|keySet
-argument_list|()
-argument_list|)
-expr_stmt|;
 block|}
 return|return
 name|set
@@ -1352,27 +1326,6 @@ comment|// in particular should be checked. It could have been a dynamic core.
 name|tmp
 operator|=
 name|transientCores
-operator|.
-name|remove
-argument_list|(
-name|name
-argument_list|)
-expr_stmt|;
-name|ret
-operator|=
-operator|(
-name|ret
-operator|==
-literal|null
-operator|)
-condition|?
-name|tmp
-else|:
-name|ret
-expr_stmt|;
-name|tmp
-operator|=
-name|createdCores
 operator|.
 name|remove
 argument_list|(
@@ -1935,34 +1888,6 @@ block|}
 return|return
 literal|null
 return|;
-block|}
-DECL|method|addCreated
-specifier|protected
-name|void
-name|addCreated
-parameter_list|(
-name|SolrCore
-name|core
-parameter_list|)
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-name|createdCores
-operator|.
-name|put
-argument_list|(
-name|core
-operator|.
-name|getName
-argument_list|()
-argument_list|,
-name|core
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 comment|/**    * Return the CoreDescriptor corresponding to a given core name.    * Blocks if the SolrCore is still loading until it is ready.    * @param coreName the name of the core    * @return the CoreDescriptor    */
 DECL|method|getCoreDescriptor
